const val tagUserName = "user_name"
const val tagAge = "age"
const val tagYear = "year_of_birth"
const val tagDisplayName = "display_name"
const val tagMaleContainer = "male_container"
const val tagMaleImage = "male_image"
const val tagFemaleContainer = "female_container"
const val tagFemaleImage = "female_image"
const val tagSave = "save"